Bunch of client app issues fixes
- Profile in Client app: 'Edit your info' label of the button should be changed - FRON-899
- Client app font: Titles should be bold - FRON-904
- Home tab in Client app: 'Last visits' label instead of 'Last visit' - FRON-912
- Photo profile: Stylist's profile photo is cut off in search - FRON-914
- Font in Stylist app: Labels of appointments at 'Home' tab are not bold - FRON-913

--- a/mobile/client/src/app/profile/profile-summary/profile-summary.component.scss
+++ b/mobile/client/src/app/profile/profile-summary/profile-summary.component.scss
@@ -1,7 +1,7 @@
 .ProfilePage {
   .ProfilePage-title {
     font-size: $t-h2;
-    font-weight: 500;
+    font-weight: 600;
   }
 
   .ProfilePage-subtitle {
