--- a/mobile/stylist/src/app/core/components/appointment-item/appointment-item.component.scss
+++ b/mobile/stylist/src/app/core/components/appointment-item/appointment-item.component.scss
@@ -87,6 +87,7 @@ appointment-item {
     padding-right: 1em;
     overflow: hidden;
     font-size: pxtovw(21px);
+    font-weight: 700;
     line-height: pxtovw(22px);
     letter-spacing: pxtovw(0.35px);
 
